Fix background z-index issue

--- a/styles.css
+++ b/styles.css
@@ -246,6 +246,7 @@ h1, h2 {
         top: 0;
         width: 100%;
         height: 100%;
+        z-index: -1;
         background-size: cover;
         -webkit-background-size: cover;
         -moz-background-size: cover;
